<resources>

    <string name="app_name">VideoManipulation</string>
    
    <string name="rotate_video">Rotate Video</string>
    <string name="join_videos">Join Videos</string>
    <string name="trim_video">Trim Video</string>
    <string name="downsample_video">Downsample Video</string>
    
    <string name="select_video">Select Video</string>
    
    <string name="selected_video_thumbnail">Selected Video\'s Thumbnail</string>
    

</resources>
