<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_video"
        android:onClick="onSelectClicked" />
    
    <LinearLayout
       android:id="@+id/selected_video_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:visibility="gone" >
	    
	    <Button
	        android:id="@+id/rotate_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rotate_video"
	        android:onClick="onRotateClicked" />
	    
	    <Button
	        android:id="@+id/join_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/join_videos"
	        android:onClick="onJoinClicked" />
	    
	    <Button
	        android:id="@+id/trim_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/trim_video"
	        android:onClick="onTrimClicked" />
	    
	    <Button
	        android:id="@+id/downsample_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/downsample_video"
	        android:onClick="onDownsampleClicked" />
	    
    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
